feat: 포스팅 통계에 유효성 검사 및 Java 호환성 개선 적용
  - 날짜 범위 유효성 검사 추가 (startDate > endDate 방지)
  - 월 파라미터 유효성 검사 추가 (1-12 범위)
  - Java 21 호환성: getFirst(), getLast()를 get(0), get(size()-1)로 변경
  - 사용자 통계와 동일한 개선사항 적용