@@ -226,6 +226,11 @@ public class StatisticsService {
     public List<DailyPostStatisticsResponse> getDailyPostStatistics(LocalDate startDate, LocalDate endDate) {
         log.info("일별 포스팅 통계 조회 - startDate: {}, endDate: {}", startDate, endDate);
 
+        // 날짜 유효성 검사
+        if (startDate.isAfter(endDate)) {
+            throw new IllegalArgumentException("시작일은 종료일보다 늦을 수 없습니다.");
+        }
+
         // LocalDateTime 범위로 변환 (성능 최적화: 인덱스 활용 가능)
         List<Object[]> results = aiContentRepository.countPublishedPostsByDateRange(
                 startDate.atStartOfDay(),
@@ -251,6 +256,11 @@ public class StatisticsService {
     * */
     public List<WeeklyPostStatisticsResponse> getWeeklyPostStatistics(int year, int month) {
         log.info("주별 포스팅 통계 조회 - year: {}, month: {}", year, month);
+
+        // 월 유효성 검사
+        if (month < 1 || month > 12) {
+            throw new IllegalArgumentException("월(month)은 1에서 12 사이의 값이어야 합니다.");
+        }
 
         // LocalDateTime 범위로 변환 (성능 최적화: 인덱스 활용 가능)
         LocalDate firstDay = LocalDate.of(year, month, 1);
@@ -278,8 +288,8 @@ public class StatisticsService {
                     List<Object[]> weekData = entry.getValue();
 
                     // 주의 시작일과 종료일
-                    LocalDate weekStart = (LocalDate) weekData.getFirst()[0];
-                    LocalDate weekEnd = (LocalDate) weekData.getLast()[0];
+                    LocalDate weekStart = (LocalDate) weekData.get(0)[0];
+                    LocalDate weekEnd = (LocalDate) weekData.get(weekData.size() - 1)[0];
 
                     // 주간 총 포스팅 수 (합계)
                     long totalPosts = weekData.stream()
@@ -335,8 +345,8 @@ public class StatisticsService {
                     List<Object[]> monthData = entry.getValue();
 
                     // 월의 시작일과 종료일
-                    LocalDate monthStart = (LocalDate) monthData.getFirst()[0];
-                    LocalDate monthEnd = (LocalDate) monthData.getLast()[0];
+                    LocalDate monthStart = (LocalDate) monthData.get(0)[0];
+                    LocalDate monthEnd = (LocalDate) monthData.get(monthData.size() - 1)[0];
 
                     // 월간 총 포스팅 수 (합계)
                     long totalPosts = monthData.stream()
